# mjuo

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.sh  package-lock.json  package.json  tsconfig.json
bootstrapper/: Cargo.toml
ipc/: Cargo.toml
ipc/src/: communication_constants.rs  ipc_server.rs  lib.rs
node-engine/: Cargo.toml
node-engine/src/: connection.rs  errors.rs  graph.rs  graph_tests.rs  lib.rs  node.rs  nodes.rs
node-engine/src/nodes/: deserialize_registry.rs  gain_graph_node.rs  registry.rs
public/: index.html
scripts/: build.sh
sound-engine/: Cargo.toml
sound-engine/src/: backend.rs  error.rs  lib.rs  midi.rs  node.rs  ringbuffer.rs  util.rs
sound-engine/src/backend/: alsa_midi.rs
sound-engine/src/midi/: messages.rs  parse.rs
sound-engine/src/node/: dummy.rs  envelope.rs  filter.rs  wav_reader.rs
sound-engine/src/util/: sample_manager.rs  wav_reader.rs
src/: App.svelte  index.js  main.js  main.rs
src/layout/: SplitView.svelte
src/main/: client.js
src/node-editor/: Editor.svelte  Node.svelte  Socket.svelte
src/node-engine/: graph.ts
src/util/: enum-stupid-exports.js  enum.js  store-watcher.js  window-size.js
vpo-backend/: .gitignore  060-C.json  Cargo.toml  README.md  build.sh  out.raw  vpo_backend.patch
vpo-backend/.cargo/: config.toml
vpo-backend/asset-manager/: Cargo.toml
vpo-backend/asset-manager/src/: lib.rs
vpo-backend/asset_manager/: Cargo.toml
vpo-backend/asset_manager/src/: lib.rs
vpo-backend/common/: Cargo.toml
vpo-backend/common/src/: alloc.rs  lib.rs  osc.rs  osc_midi.rs  resource_manager.rs  traits.rs
vpo-backend/ipc/: Cargo.toml
vpo-backend/ipc/src/: error.rs  file_server.rs  ipc_message.rs  ipc_server.rs  lib.rs  send_buffer.rs
vpo-backend/node-engine/: Cargo.toml  NODE_LIFECYCLE.md  README.md
vpo-backend/node-engine/src/: connection.rs  connection_tests.rs  engine.rs  errors.rs  global_state.rs  graph.rs  graph_manager.rs  graph_manager_tests.rs  graph_tests.rs  graph_traverse.rs  io_routing.rs  lib.rs  midi_store.rs  node.rs  node_graph.rs  node_instance.rs  node_wrapper.rs  nodes.rs  property.rs  resources.rs  socket_registry.rs  socket_registry_tests.rs  state.rs  traversal.rs
vpo-backend/node-engine/src/node/: buffered_traverser.rs  calculate_traversal_order.rs  midi_store.rs  mod.rs  osc_store.rs
vpo-backend/node-engine/src/nodes/: biquad_filter.rs  button.rs  chord_sequencer.rs  dummy.rs  envelope.rs  expression.rs  function_node.rs  gain.rs  gain_graph_node.rs  inputs.rs  memory.rs  midi_filter.rs  midi_input.rs  midi_merger.rs  midi_router.rs  midi_switch.rs  midi_to_value.rs  midi_to_values.rs  midi_transpose.rs  mixer.rs  mod.rs  mono_sample_player.rs  note_merger.rs  osc_filter.rs  osc_to_value.rs  oscillator.rs  output.rs  outputs.rs  pipe_player.rs  placeholder.rs  polyphonic.rs  portamento.rs  prelude.rs  rank_player.rs  registry.rs  reverb.rs  stream_expression.rs  template.rs  test_node.rs  toggle.rs  (+5 more)
vpo-backend/node-engine/src/traversal/: buffered_traverser.rs  calculate_traversal_order.rs  midi_store.rs  mod.rs  traverser.rs
vpo-backend/node-engine/src/ui/: mod.rs  ui_node.rs
vpo-backend/resource-manager/: Cargo.toml
vpo-backend/resource-manager/src/: lib.rs
vpo-backend/sound-engine/: 060-C.json  Cargo.toml
vpo-backend/sound-engine/src/: backend.rs  error.rs  lib.rs  node.rs  util.rs  wave.rs
vpo-backend/sound-engine/src/backend/: alsa.rs  cpal.rs  midir.rs  pulse.rs
vpo-backend/sound-engine/src/midi/: messages.rs  parse.rs
vpo-backend/sound-engine/src/node/: biquad_filter.rs  dummy.rs  envelope.rs  filter.rs  mono_buffer_player.rs  oscillator.rs  ramp.rs  shelf_filter.rs  wavetable_oscillator.rs  zita_rev1.rs
vpo-backend/sound-engine/src/sampling/: audio_loader.rs  double_buffer.rs  envelope.rs  interpolate.rs  mod.rs  percussion_player.rs  phase_calculator.rs  pipe_player.rs  rank.rs  rank_player.rs  sample.rs  sample_player.rs  savitzky_golay.rs  util.rs
vpo-backend/sound-engine/src/util/: interpolate.rs  sample_manager.rs  wav_reader.rs
vpo-backend/sound-engine/src/wave/: interpolate.rs  tables.rs  wavetable.rs
vpo-backend/src/: engine.rs  errors.rs  lib.rs  main.rs  routes.rs  state.rs  util.rs  wasm_lib.rs
vpo-backend/src/io/: alsa.rs  alsa_midi.rs  clocked.rs  cpal.rs  file_watcher.rs  midi.rs  midir.rs  mod.rs  pulse.rs  scoped_pool.rs
vpo-backend/src/migrations/: m_0000_add_polyphonic_prop.rs  mod.rs
vpo-backend/src/resource/: decode_audio.rs  mod.rs  rank.rs  sample.rs  ui.rs  util.rs  wavetable.rs
vpo-backend/src/routes/: graph.rs  prelude.rs
vpo-backend/src/routes/graph/: commit.rs  connect_node.rs  copy.rs  disconnect_node.rs  get.rs  load.rs  mod.rs  new_node.rs  paste.rs  redo.rs  remove_node.rs  save.rs  switch_graph.rs  undo.rs  update_node_state.rs  update_node_ui.rs  update_nodes.rs
vpo-backend/src/routes/io/: create.rs  import_rank.rs  load.rs  mod.rs  refresh.rs  save.rs
vpo-frontend/: LICENSE.md  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig-main.json  tsconfig-svelte.json  vite.config.ts
vpo-frontend-new/: package-lock.json  package.json
vpo-frontend-new/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Page.svelte  engine.ts
vpo-frontend/src/: App.svelte  app.html  global.d.ts  i18n.ts  index.ts  svelte.ts  wasm_engine.ts
vpo-frontend/src/ddgg/: gen_vec.ts  graph.ts  types.ts
vpo-frontend/src/file-editor/: FileEditor.svelte  FileView.svelte
vpo-frontend/src/lang/: en.json
vpo-frontend/src/layout/: SplitView.svelte
vpo-frontend/src/lib/: constants.ts
vpo-frontend/src/main/: client.ts  preload.ts
vpo-frontend/src/node-editor/: Breadcrumb.svelte  Editor.svelte  Node.svelte  NodeEditor.svelte  NodePropertyRow.svelte  NodeRow.svelte  NumberProperty.svelte  OptionsProperty.svelte  PropertyEditor.svelte  SideNavbar.svelte  Socket.svelte  editor-utils.ts  interpolation.ts  node-list.js  socket.ts  state.ts
vpo-frontend/src/node-engine/: connection.ts  global_state.ts  graph.ts  graph_manager.ts  node.ts  node_graph.ts  node_index.ts  property.ts  (+2 more)
(+95 files in other folders)
