[package]
name = "vpo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sound-engine = { path = "./sound-engine" }
node-engine = { path = "./node-engine" }
ipc = { path = "./ipc" }

[workspace]

members = [
    "sound-engine",
    "node-engine",
    "ipc"
]