[package]
name = "node-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sound-engine = { path = "../sound-engine" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
lazy_static = "1.4.0"