[package]
name = "sound-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2.3"
pulse = { package = "libpulse-binding", version = "2.25.0" }
psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
