[package]
edition = "2021"
name = "vpo-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
futures = "0.3.27"
ipc = {path = "./ipc"}
lazy_static = "1.4.0"
midir = "0.8"
node-engine = {path = "./node-engine"}
regex = "1.7"
resource-manager = {path = "./resource-manager"}
rhai = {version = "1.7.0", features = ["f32_float", "only_i32", "wasm-bindgen"]}
semver = "1.0.14"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
smallvec = {version = "1.10", features = ["serde"]}
snafu = "0.7"
sound-engine = {path = "./sound-engine"}
toml = "0.5"
walkdir = "2"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(unix)'.dependencies]
alsa = {version = "0.6.0"}
psimple = {package = "libpulse-simple-binding", version = "2.24.1"}
pulse = {package = "libpulse-binding", version = "2.25.0"}

[target.'cfg(any(unix,windows))'.dependencies]
async-std = "1.10.0"
cpal = "0.14.0"
ringbuf = "0.2.8"
rodio = "0.16.0"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.dev.build-override]
codegen-units = 256
opt-level = 3

[profile.linux]
inherits = "release"
opt-level = 3

[profile.debug-release]
debug = 2
inherits = "dev"
opt-level = 3

[workspace]
members = [
  "sound-engine",
  "node-engine",
  "ipc",
  "resource-manager",
]
