[package]
edition = "2021"
name = "vpo-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
common = { path = "./common" }
futures = "0.3.27"
ipc = { path = "./ipc" }
lazy_static = "1.4.0"
node-engine = { path = "./node-engine" }
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
once_cell = "1.17.1"
regex = "1.7"
rhai = { version = "1.7.0", default-features = false, features = [
  "f32_float",
  "only_i32",
  "std",
  "sync",
] }
semver = "1.0.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
smallvec = { version = "1.10", features = ["serde"] }
snafu = "0.7"
sound-engine = { path = "./sound-engine" }
toml_edit = { version = "0.19.8", features = ["serde"] }
petgraph = { version = "0.6.0", features = ["serde-1"] }
clocked = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.6" }
js-sys = "0.3.61"
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.61", features = ["console"] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true

[target.'cfg(any(unix,windows))'.dependencies]
cpal = "0.15.0"
hound = "3.5.0"
hyper = { version = "0.14.26", features = ["full"] }
midir = "0.8"
rfd = "0.11.3"
rtrb = "0.2.3"
symphonia = { version = "0.5.2", features = ["all"] }
tokio = "1.28.0"
walkdir = "2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.dev.build-override]
codegen-units = 256
opt-level = 3

[profile.linux]
inherits = "release"
opt-level = 3

[profile.debug-release]
debug = 2
inherits = "dev"
opt-level = 3

[workspace]
members = ["sound-engine", "node-engine", "ipc", "common"]
