[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 = "0.2.15"
buddy_system_allocator = "0.9.0"
ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
    "js_names",
    "serde",
    "serde_string_indexes",
] }
memchr = "2.7.1"
seahash = "4.1.0"
serde = { version = "1.0.133", features = ["derive"] }
clocked = "0.8.0"
paste = "1.0.15"
cstr = "0.2.12"

[dev-dependencies]
naughty-strings = "0.2.4"
