[package]
edition = "2021"
name = "ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
bitflags = "1.3.2"
futures = "0.3"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
thiserror = "1.0.30"
