[package]
edition = "2021"
name = "ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
futures = "0.3.28"
log = "0.4.17"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
snafu = "0.7.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.18.0"
