[package]
edition = "2021"
name = "ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cfg-if = "1.0.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
snafu = "0.7.0"

[target.'cfg(any(unix,windows))'.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
flume = "0.11.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
hyper = { version = "0.14.26", features = ["full"] }
