[package]
name = "node-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sound-engine = { path = "../sound-engine" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
lazy_static = "1.4.0"
thiserror = "1.0.30"
petgraph = "0.6.0"
strum = "0.24.0"
strum_macros = "0.24"
rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
enum_dispatch = "0.3.8"