[package]
edition = "2021"
name = "node-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
    "js_names",
    "serde",
    "serde_string_indexes",
] }
enum_dispatch = "0.3.8"
itertools = "0.10.5"
lazy_static = "1.4.0"
petgraph = "0.6.0"
rhai = { version = "1.7.0", default-features = false, features = [
    "f32_float",
    "only_i32",
    "std",
] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
smallvec = { version = "1.9", features = ["serde"] }
smartstring = "1.0"
snafu = "0.7"
sound-engine = { path = "../sound-engine" }
common = { path = "../common" }
wasm-bindgen = "0.2.84"
self_cell = "1.0.1"
generational-arena = "0.2.9"
recycle_vec = "1.0.4"
clocked = "0.6.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.61", features = [] }
