[package]
edition = "2021"
name = "resource-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0"
snafu = "0.7"
threadpool = "1.8.1"
toml = "0.5"
