[package]
name = "sound-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2.3"
lazy_static = "1.4.0"
snafu = "0.7.0"
serde = { version = "1.0.133", features = ["derive"] }
cpal = "0.14.0"
ringbuf = "0.2.8"
rodio = "0.16.0"
serde_json = "1.0.74"

[target.'cfg(unix)'.dependencies]
alsa = { version = "0.6.0" }
pulse = { package = "libpulse-binding", version = "2.25.0" }
psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
