[package]
edition = "2021"
name = "sound-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset-manager = {path = "../asset-manager"}
cpal = "0.14.0"
lazy_static = "1.4.0"
ringbuf = "0.2.8"
rodio = "0.16.0"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
simple-error = "0.2.3"
snafu = "0.7.0"

[target.'cfg(unix)'.dependencies]
alsa = {version = "0.6.0"}
psimple = {package = "libpulse-simple-binding", version = "2.24.1"}
pulse = {package = "libpulse-binding", version = "2.25.0"}
